--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.115.0",
+    "httpx>=0.27.2",
+    "pandas>=2.2.3",
     "pydantic-settings>=2.5.2",
+    "pytest>=8.3.3",
     "python-multipart>=0.0.12",
     "sqlmodel>=0.0.22",
     "uvicorn>=0.31.0",
