--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,35 @@ dependencies = [
     "sqlmodel>=0.0.22",
     "uvicorn>=0.31.0",
 ]
+
+[tool.basedpyright]
+include = ["./*"]
+exclude = ["**/node_modules",
+    "**/__pycache__",
+    "src/experimental",
+    "src/typestubs"
+]
+ignore = ["src/oldstuff"]
+defineConstant = { DEBUG = true }
+stubPath = "src/stubs"
+
+# reportMissingImports = true
+
+pythonVersion = "3.11"
+pythonPlatform = "Linux"
+# reportGeneralTypeIssues = false
+
+# basedpyright errors and warnings
+reportMissingTypeStubs = "warning"
+
+reportAny = false
+
+
+reportUnknownMemberType = "warning"
+# reportUnknownParameterType = false
+# reportUnknownVariableType = false
+
+executionEnvironments = [
+{ root = "web" }
+]
+
